2016-09-14  Marko Myllynen  <myllynen@redhat.com>

	* unposted: Completion/Unix/Command/_libvirt: Add another
	noglob. (Follow-up to 39199)

2016-09-14  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 39199: Completion/Unix/Command/_libvirt: Support libvirt URLs
	that contain a literal question mark under noglob.

	* unposted: Completion/Unix/Command/_git: Permit multiple
	-c options.

2016-09-13  Oliver Kiddle  <opk@zsh.org>

	* 39307: Completion/Unix/Command/_vim,
	Completion/Unix/Command/_xxd: update options up to vim 8

	* 39299: Completion/Base/Completer/_external_pwds: better
	Freebsd support in _external_pwds using procstat

2016-09-13  Peter Stephenson  <p.stephenson@samsung.com>

	* 39292: Config/version.mk, Src/cond.c, Src/parse.c, Src/text.c,
	Src/zsh.h, Test/C02cond.ztst, Test/D01prompt.ztst,
	Test/E02xtrace.ztst: Distinguish "=" and "==" tests in output to
	avoid confusion.  Update version number to 5.2-dev-2 (unposted:
	update date, too).

	* 39305: Src/exec.c: error handling on substitution for here
	document was illogical.

2016-09-12  Oliver Kiddle  <opk@zsh.org>

	* 39295: Completion/Unix/Type/_remote_files: allow '--' to
	appear in the command line passed as an argument

	* 39287: Completion/Unix/Command/_graphicsmagick,
	Completion/Unix/Command/_imagemagick, Completion/X/Command/_okular:
	add .tif as a valid extension for TIFF files

2016-09-12  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/mod_sched.yo: reference use of widgets to
	effect editor changes from a sched command

	* 39297: Doc/Zsh/compsys.yo: more of 39284, it's painful to add
	texi nodes in yodl

2016-09-12  Peter Stephenson  <p.stephenson@samsung.com>

	* 39255: Doc/Zsh/cond.yo: = in conditions is not actually going
	to be removed.

2016-09-11  Barton E. Schaefer  <schaefer@zsh.org>

	* 39268: Src/Modules/system.c: "zsystem flock -t 0 ..." tries only
	once to flock and immediately returns success or failure

2016-09-11  Vin Shelton  <ethersoft@gmail.com>
