@@ -1,3 +1,9 @@
+2016-09-14  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* zsh-users/21903: Src/subst.c, Src/zsh.h,
+	Test/D04parameter.ztst: ${...?...} in interactive shell should
+	abort to top level, not just current command.
+
 2016-09-14  Marko Myllynen  <myllynen@redhat.com>
 
 	* unposted: Completion/Unix/Command/_libvirt: Add another
